# notebooks

./: .editorconfig  README.md  pyproject.toml
introduccion_modelacion/: README.md
introduccion_modelacion/s2/: Codigo1.R  ESPECIE_DATOS.xlsx  EjercicioLDA.R  Iris.xls  analisis_discriminante.ipynb
