[project]
name = "notebooks"
version = "0.1.0"
description = "Homework and stuff"
authors = [
    {name = "Ricardo Rivas",email = "richistron@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "black[jupyter] (>=25.1.0,<26.0.0)",
    "pandas-stubs (>=2.3.2.250827,<3.0.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
package-mode = false

